@@ -1,6 +1,6 @@
 Authors of csrspmv.
 
-  Copyright (C) 2020 James D. Trotter
+  Copyright (C) 2023 James D. Trotter
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
