@@ -2,7 +2,7 @@ This is the README file for csrspmv, a program for benchmarking sparse
 marix-vector multiplication (SpMV) for matrices in the compressed
 sparse row (CSR) format.
 
-  Copyright (C) 2020 James D. Trotter
+  Copyright (C) 2023 James D. Trotter
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
